feature: add classroom entity